# MacSweeper-Devtools

./: .gitignore  Cargo.toml  DEPLOYMENT_COMPLETE.md  README.md  RELEASE_GUIDE.md  project_brief.md  setup-tap.sh
homebrew/: macsweep.rb
resources/: schema.sql
src/: lib.rs  main.rs
src/analysis/: dependencies.rs  mod.rs  orphans.rs  recommendations.rs
src/cleanup/: backup.rs  executor.rs  mod.rs
src/cli/: commands.rs  mod.rs  output.rs
src/scanner/: applications.rs  cargo.rs  gem.rs  generic.rs  homebrew.rs  mod.rs  npm.rs  pip.rs
src/storage/: database.rs  migrations.rs  mod.rs
src/usage/: aggregator.rs  atime.rs  mod.rs  shell_history.rs  spotlight.rs
src/utils/: date.rs  mod.rs  process.rs  size.rs
