[package]
name = "macsweep"
version = "0.1.0"
edition = "2021"
description = "Mac Package Hygiene Tool - Find and clean unused packages"
license = "MIT"
repository = "https://github.com/Elvis020/MacSweeper-Devtools"
keywords = ["macos", "homebrew", "cleanup", "packages", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo"] }
colored = "2"
comfy-table = "7"
indicatif = "0.17"          # Progress bars
dialoguer = "0.11"          # Interactive prompts

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir = "2"
dirs = "5"                   # Standard directories
which = "6"                  # Find binaries

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Parsing
regex = "1"
lazy_static = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "macsweep"
path = "src/main.rs"
